<resources>
    <string name="app_name">Logica App Kotlin</string>
    <string name="a_char">A</string>
    <string name="b_char">B</string>
    <string name="true_char">T</string>
    <string name="false_char">F</string>
    <string name="question">A^B</string>
    <string name="question_text">Conjunction (AND)</string>
    <string name="correct_text">The correct number of answers is:</string>
    <string name="check_btn">Check Answers</string>
    <string name="input_digits">TFtf</string>
</resources>
